[tool.poetry]
name = "NYC-Motor-Vehicle-Collision"
version = "1.0.0"
description = "Analyzing the NYC Motor Vehicle Collision Dataset and making a web app using Streamlit and Python"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = ">=1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
